--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy homelab
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
       - "stacks/**"
       - "scripts/**"
@@ -10,10 +10,23 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, Linux, homelab]
+    runs-on: [self-hosted, Linux, X64]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy
-        run: ./scripts/deploy.sh
+      - name: Show context
+        run: |
+          whoami
+          hostname
+          docker ps
+          docker compose version
+
+      - name: Deploy web stack
+        run: |
+          cd stacks/web
+          docker compose -f compose.yml up -d
+
+      - name: Status
+        run: docker ps --format 'table {{.Names}}\t{{.Image}}\t{{.Status}}\t{{.Ports}}'
