--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy homelab
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
     paths:
       - "stacks/**"
       - "scripts/**"
@@ -10,11 +10,12 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, Linux, X64, homelab]
-
+    runs-on: [ self-hosted, Linux, X64, homelab ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+          with:
+            clean: true
 
       - name: Show context
         run: |
