--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,20 +2,47 @@ name: Deploy homelab
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
       - "stacks/**"
       - "scripts/**"
       - ".github/workflows/deploy.yml"
 
+# Least privilege by default
+permissions:
+  contents: read
+
+# Prevent overlapping deployments on the same runner
+concurrency:
+  group: homelab-deploy-main
+  cancel-in-progress: false
+
 jobs:
   deploy:
-    runs-on: [ self-hosted, Linux, X64, homelab ]
+    name: Deploy to homelab
+    runs-on: [self-hosted, Linux, X64, homelab]
+    timeout-minutes: 10
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          clean: true
+          persist-credentials: false
 
-      - name: Deploy web stack
+      - name: Sanity checks
         run: |
+          set -euo pipefail
+          echo "Runner user: $(whoami)"
+          echo "Host: $(hostname)"
+          echo "Working dir: $(pwd)"
+          git rev-parse --short HEAD
+          docker version
+          docker compose version
+
+      - name: Deploy
+        run: |
+          set -euo pipefail
           chmod +x ./scripts/deploy.sh
           ./scripts/deploy.sh
